2009-04-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/command/main.py:
	flumotion-command's transport parameter should expect an string
	parameter but it was treated as a flag in the option parser.

2009-04-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/eventcalendar.py:
	* flumotion/test/test_common_eventcalendar.py:
	The RECURRENCE-ID in iCal files is returned as a vDDDTypes object, not
	a string. Fixes #1269, parsing RECURRENCE-IDs with TZID.

2009-04-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/eventcalendar.py:
	* flumotion/test/test_common_eventcalendar.py:
	Don't raise NotImplementedErrors for implemented features. Fixes #1268.

2009-04-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/eventcalendar.py:
	Add workaround for an apparent Google Calendar bug.

2009-04-01  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/productionsteps.py:
	Hide the corresponent combo and check boxes if no audio or video
	producer exist on the flow when adding a new format from the admin
	window.

2009-03-26  Arek Korbik  <arkadini@gmail.com>

	* tools/genpls.py:
	Add a simple playlist generator.

2009-03-25  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/command/component.py:
	Further fix flumotion-command, after the fallout in r7224.
	See also r7691.

2009-03-25  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/configurationassistant.py:
	Show the translations for the descriptions at scenario step.

2009-03-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Fix discont log message.

2009-03-24  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/consumers/disker/disker.py:
	Fixed a NameError in an exception handler.

2009-03-24  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/playlist/Makefile.am:
	* flumotion/component/producers/playlist/playlist.dtd: