@@ -1,3 +1,9 @@
+2009-04-15  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
+
+	* flumotion/test/Makefile.am:
+	* flumotion/test/test_import.py:
+ 	Add a test case that imports all flumotion modules.
+
 2009-04-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/admin/command/main.py:
